<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sorting Game</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_level">Select a Level to Play</string>
    <string name="title_activity_game">Play The Game!</string>
    <string name="title_activity_customizer">Customization</string>
    <string name="title_activity_add_update">Select a Level to Update</string>
    <string name="title_activity_delete">Select a Level to Delete</string>
    <string name="title_activity_gallery">Image Gallery</string>
    <string name="choose_level_menu">Play</string>
    <string name="customizer">Customize</string>
    <string name="choose_level">Choose the level you would like to play.\nList of levels to play will go here.</string>
    <string name="choose_add">Add \n Level</string>
    <string name="choose_update">Update \n Level</string>
    <string name="choose_delete">Delete \n Level</string>
    <string name="hide_bar">Hide</string>
    <string name="back_arrow">Test</string>
    <string name="add_level">Create New Level</string>
    <string name="cancel">Cancel</string>
    <string name="addupdate_header">Choose a level to update</string>
    <string name="leveltext">Level Name</string>
    <string name="categorytext">Categories</string>
    <string name="add_icon">Icon</string>
    <string name="add_background">Background</string>
    <string name="cat_message">Put the categories in the order you want them to appear.</string>
    <string name="next">Next</string>
    <string name="done">Save</string>
    <string name="title_activity_edit_level">Edit Level</string>
    <string name="title_activity_edit_category">Edit Categories</string>
    <string name="select_images">Select Images for Each Category</string>
    <string name="add_cat1">Add Images \n to Category 1</string>
    <string name="add_cat2">Add Images \n to Category 2</string>
    <string name="add_cat3">Add Images \n to Category 3</string>
    <string name="title_activity_game_win">GameWinActivity</string>
    <string name="mute">Mute</string>
    <string name="sound">Disable Sound</string>
    <string name="dialog_delete_level">Are you sure you would like to delete the level?</string>
    <string name="dialog_confirm">Yes</string>
    <string name="content">Image</string>
    <string name="update">Update</string>
	<string name="save">Save</string>
	<string name="pref_user_profile">User Profile</string>
	<string name="pref_music_settings">Music Settings</string>
	<string name="pref_user_name">Username</string>
	<string name="pref_user_name_summary">Set your username</string>
	<string name="pref_password">Password</string>
	<string name="pref_password_summary">Set your password</string>
	<string name="pref_music_enable">Enable Music</string>
	<string name="pref_music_enable_summary">Toggle whether or not to play music</string>
	<string name="pref_music_select">Pick Music</string>
	<string name="pref_music_select_summary">Choose which music to play (Restart to take effect)</string>

</resources>
