<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a50b00"
    tools:context=".EditLevelActivity" >

    <EditText
        android:id="@+id/category1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/level_name"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/category2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/level_name"
        android:layout_below="@+id/category1"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/category3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/level_name"
        android:layout_below="@+id/category2"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="19dp"
        android:text="@string/leveltext"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/level_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textLevel"
        android:layout_marginLeft="78dp"
        android:layout_toRightOf="@+id/textCategories"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/icon"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/category1"
        android:layout_centerHorizontal="true"
        android:text="@string/add_icon"
        android:onClick="chooseFromGallery" />

    <Button
        android:id="@+id/background"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/icon"
        android:layout_alignBottom="@+id/icon"
        android:layout_alignRight="@+id/category1"
        android:layout_marginRight="30dp"
        android:text="@string/add_background"
        android:onClick="chooseFromGallery" />

    <TextView
        android:id="@+id/textCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/category2"
        android:layout_alignLeft="@+id/textLevel"
        android:text="@string/categorytext"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/catMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/category3"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textLevel"
        android:layout_marginLeft="14dp"
        android:text="@string/cat_message"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/next"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/category3"
        android:text="@string/next" 
        android:onClick="loadEditCategoryInterface"/>

</RelativeLayout>