<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a50b00"
    tools:context=".EditCategoryActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="159dp"
        android:text="@string/select_images"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignTop="@+id/cat3_images"
        android:text="Category 3"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cat3_images"
        android:layout_marginLeft="30dp"
        android:text="@string/cancel"
        android:onClick="loadEditLevelInterface" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="19dp"
        android:layout_toRightOf="@+id/button1"
        android:text="Category 1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/cat1_images"
        android:layout_marginTop="20dp"
        android:text="Category 2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/cat1_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/cat2_images"
        android:text="@string/images"
        android:onClick="chooseFromGallery" />

    <Button
        android:id="@+id/cat3_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/cat2_images"
        android:layout_marginRight="81dp"
        android:layout_marginTop="17dp"
        android:text="@string/images"
        android:onClick="chooseFromGallery" />

    <Button
        android:id="@+id/cat2_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cat3_images"
        android:layout_alignTop="@+id/textView3"
        android:text="@string/images"
        android:onClick="chooseFromGallery" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cat3_images"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/done" />

</RelativeLayout>